# SKillbox_Project

./: CMakeLists.txt  file1.txt  file2.txt
files/: file3.txt
include/: InvertedIndex.h  JsonHandler.h  SearchServer.h
json/: answers.json  config.json  requests.json
src/: CMakeLists.txt  InvertedIndex.cpp  JsonHandler.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndexTest.cpp  JsonHandlerTest.cpp  SearchServerTest.cpp
